# test_task_1

./: README.md  pyproject.toml
clients/: models.py  tasks.py  utils.py
clients/migrations/: 0001_initial.py  0002_auto_20240718_2357.py
test_task_1/: celery.py  settings.py
